...
        android:layout_marginTop="8dp"
        android:background="@drawable/intention_style"
        android:elevation="8dp"
        android:visibility="visible" />

    <android.support.v7.widget.CardView
        android:id="@+id/listViewLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchLayout"
        android:layout_marginEnd="1dp"
        android:layout_marginStart="1dp"
        android:visibility="visible"
        app:cardElevation="4dp"
        tools:background="@color/material.core.lightBlue">

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
...
