<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="60dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:lines="1"
        android:textStyle="normal"
        android:textColor="#777"
        android:fontFamily="sans-serif"
        android:layout_gravity="center" />
</FrameLayout>
